--- a/about-me.html
+++ b/about-me.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
 <head>
   <title>About Me</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
+<body>
+  <div class="container">
+    <div class="jumbotron text-center">
+      <h1>Louie Knolle: Programming Portfolio</h1>
+      <p>About Me</p>
+    </div>
+  </div>
+</body>
 </html>
