--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en-US">
 <head>
   <title>Programming Portfolio</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
+<body>
+  <div class="container">
+    <div class="jumbotron text-center">
+      <h1>Louie Knolle: Programming Portfolio</h1>
+      <p>Web developer in training.</p>
+    </div>
+
+    
+  </div>
+</body>
 </html>
