add navigation bar on all 3 pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       <p>Web developer in training.</p>
     </div>
 
-    
+    <nav class="nav-bar">
+      <a href="index.html" class="bar-item">Home</a>
+      <a href="about-me.html" class="bar-item">About</a>
+      <a href="projects.html" class="bar-item">Projects</a>
+    </nav>
   </div>
 </body>
 </html>
