--- a/about-me.html
+++ b/about-me.html
@@ -11,6 +11,12 @@
       <h1>Louie Knolle: Programming Portfolio</h1>
       <p>About Me</p>
     </div>
+
+    <nav class="nav-bar">
+      <a href="index.html" class="bar-item">Home</a>
+      <a href="about-me.html" class="bar-item">About</a>
+      <a href="projects.html" class="bar-item">Projects</a>
+    </nav>
   </div>
 </body>
 </html>
