add index image and update to fluid jumbotrons

--- a/about-me.html
+++ b/about-me.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron text-center">
-      <h1>Louie Knolle: Programming Portfolio</h1>
-      <p>About Me</p>
+    <div class="jumbotron jumbotron-fluid text-center">
+      <div class="container">
+        <h1>Louie Knolle: Programming Portfolio</h1>
+        <p>About Me</p>
+      </div>
     </div>
 
     <nav class="nav-bar">
@@ -17,6 +19,10 @@
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
     </nav>
+
+    
+
+    
   </div>
 </body>
 </html>
