--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron text-center">
-      <h1>Louie Knolle: Programming Portfolio</h1>
-      <p>Student Projects Catalog</p>
+    <div class="jumbotron jumbotron-fluid text-center">
+      <div class="container">
+        <h1>Louie Knolle: Programming Portfolio</h1>
+        <p>Projects</p>
+      </div>
     </div>
 
     <nav class="nav-bar">
