add education, work, hobbies and coding interest sections to about.html

--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,38 @@
       <a href="projects.html" class="bar-item">Projects</a>
     </nav>
 
-    
+    <div class="row row-cols-2">
+      <div class="col">
+        <h3>Education</h3>
+        <ul class="school">
+          <li>Epicodus Fullstack Coding Bootcamp Graduate 2022 (hopefully!)</li>
+          <li>University of Cincinnati Class of 2014, B.S. Environmental Studies</li>
+          <li>Anderson High School Class of 2010</li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Work Experience</h3>
+        <ul class="work">
+          <li>March 2020 to Present: Water Treatment Plant Operator, Town of Amherst, MA</li>
+          <li>April 2018 to March 2020: Land Management Steward, The Trustees of Reservations</li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Hobbies</h3>
+        <ul>
+          <li>Hiking, backpacking and camping</li>
+          <li>Wildcrafting and Foraging</li>
+          <li>Reading</li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Interest in Coding</h3>
+        <ol>
+          <li>Always learning new things both in and out of work, programming will allow me to learn new things my whole career.</li>
+          <li>Can relate to finding tech overwhelming, would like to help keep people connected as life goes more and more online.</li>
+        </ol>
+      </div>
+    </div>
 
     
   </div>
