add content for first project site, vacation site

--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
     </nav>
 
     <dl class="row">
-      <dt class="col-sm-3">Description lists</dt>
-      <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
+      <dt class="col-sm-3"><a href="">Vacation Site</a></dt>
+      <dd class="col-sm-9">Using the Bootstrap framework for the first time along with HTML and CSS, I created the homepage for site dedicated to Ireland, a place I'd like to visit someday.</dd>
     
       <dt class="col-sm-3">Euismod</dt>
       <dd class="col-sm-9">
