begin to add styling to jumbotron, navbar and image on homepage

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       </div>
     </div>
 
+    <div class="nav-background">
     <nav class="nav-bar">
-      <a href="index.html" class="bar-item">Home</a>
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
     </nav>
+    </div>
 
-    <div>
-      <img src="img/index-cover.jpg" alt="summit with mountains in distance">
+    <div class="photo-container">
+      <img class="cover-photo" src="img/index-cover.jpg" alt="summit with mountains in distance">
     </div>
   </div>
 </body>
