--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <div class="jumbotron jumbotron-fluid text-center">
-      <div class="container">
+      <div class="main-header">
         <h1>Louie Knolle: Programming Portfolio</h1>
         <p>About Me</p>
       </div>
