add more styling to about and projects pages

--- a/about-me.html
+++ b/about-me.html
@@ -42,6 +42,10 @@
           <li>Hiking, backpacking and camping</li>
           <li>Wildcrafting and Foraging</li>
           <li>Reading</li>
+          <li>Creating more list items</li>
+          <li>So that my page looks more even</li>
+          <li>Almost there</li>
+          <li>Looks better</li>
         </ul>
       </div>
       <div class="col">
