change font-size of page titles

--- a/about-me.html
+++ b/about-me.html
@@ -10,7 +10,7 @@
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="main-header">
         <h1>Louie Knolle: Programming Portfolio</h1>
-        <p>About Me</p>
+        <p class="title">About Me</p>
       </div>
     </div>
 
