--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="container">
         <h1>Louie Knolle: Programming Portfolio</h1>
-        <p>Web developer in training.</p>
+        <p class="title">Web developer in training.</p>
       </div>
     </div>
 
