--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="main-header">
         <h1>Louie Knolle: Programming Portfolio</h1>
-        <p>Projects</p>
+        <p class="title">Projects</p>
       </div>
     </div>
 
