push now that I have wifi

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="nav-background">
     <nav class="nav-bar">
-      <a href="" class="bar-item">Home</a>
+      <a href="" class="bar-item">Homey</a>
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
     </nav>
