add em, strong, and span tags

--- a/about-me.html
+++ b/about-me.html
@@ -10,7 +10,7 @@
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="main-header">
         <h1>Louie Knolle: Programming Portfolio</h1>
-        <p class="title">About Me</p>
+        <p class="title"><strong>About Me</strong></p>
       </div>
     </div>
 
@@ -24,7 +24,7 @@
       <div class="col">
         <h3>Education</h3>
         <ul class="school">
-          <li>Epicodus Fullstack Coding Bootcamp Graduate 2022 (hopefully!)</li>
+          <li>Epicodus Fullstack Coding Bootcamp Graduate 2022 <span>(hopefully!)</span></li>
           <li>University of Cincinnati Class of 2014, B.S. Environmental Studies</li>
           <li>Anderson High School Class of 2010</li>
         </ul>
