--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="container">
         <h1>Louie Knolle: Programming Portfolio</h1>
-        <p class="title">Web developer in training.</p>
+        <p class="title"><strong>Web developer in training.</strong></p>
       </div>
     </div>
 
     <div class="nav-background">
     <nav class="nav-bar">
-      <a href="" class="bar-item">Homey</a>
+      <a href="" class="bar-item">Home</a>
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
     </nav>
