add a color change when project links are hovered over

--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,9 @@
     
       <dt class="col-sm-3 text-truncate"><a href="https://github.com/louieknolle/my-first-webpage.git" class="proj-list">First Webpage</a></dt>
       <dd class="col-sm-9">This was one of the first practice projects we worked on as we learned about different <em>HTML</em> tags and basic styling techniques with <em>CSS</em>. </dd>
+
+      <dt class="col-sm-3 text-truncate"><a href="https://github.com/louieknolle/boring-lecture.git" class="proj-list">Boring Lecture</a></dt>
+      <dd class="col-sm-9">This project used <em>HTML and CSS</em> to make an introduction to a boring lecture and was practice manipulating components of the box model.</dd>
     </dl>
   </div>
 </body>
