--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <title>Programming Portfolio</title>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -22,9 +22,25 @@
     </nav>
     </div>
 
-    <div class="photo-container">
+    <!-- <div class="photo-container">
       <img class="cover-photo" src="img/index-cover.jpg" alt="summit with mountains in distance">
+    </div> -->
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/beach.JPEG" class="d-block w-100" alt="person on rocky beach smiling">
+        </div>
+        <div class="carousel-item">
+          <img src="img/index-cover.jpg" class="d-block w-100" alt="profile of person on mountain summit">
+        </div>
+        <div class="carousel-item">
+          <img src="img/family.PNG" class="d-block w-100" alt="man and woman with child laughing">
+        </div>
+      </div>
     </div>
+
+
   </div>
 </body>
 </html>
