fix <a> styling on Projects page and headers on about

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </nav>
     </div>
 
-    <!-- <div class="photo-container">
+    <div class="photo-container">
       <img class="cover-photo" src="img/index-cover.jpg" alt="summit with mountains in distance">
-    </div> -->
+    </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/beach.JPEG" class="d-block w-100" alt="person on rocky beach smiling">
@@ -38,7 +38,7 @@
           <img src="img/family.PNG" class="d-block w-100" alt="man and woman with child laughing">
         </div>
       </div>
-    </div>
+    </div> -->
 
 
   </div>
