--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <title>Programming Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -23,9 +23,10 @@
     </div>
 
     <div class="photo-container">
-      <img class="cover-photo" src="img/index-cover.jpg" alt="summit with mountains in distance">
+      <img class="cover-photo" src="img/beach.JPEG" alt="summit with mountains in distance">
     </div>
 
+    <!-- Couldn't link JS correctly? -->
     <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
