add contact page and need to look at jumbo covering nav later

--- a/about-me.html
+++ b/about-me.html
@@ -6,18 +6,19 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="container">
-    <div class="jumbotron jumbotron-fluid text-center">
-      <div class="main-header">
-        <h1>Louie Knolle: Programming Portfolio</h1>
-        <p class="title"><strong>About Me</strong></p>
-      </div>
+  <div class="jumbotron jumbotron-fluid text-center">
+    <div class="main-header">
+      <h1>Louie Knolle: Programming Portfolio</h1>
+      <p class="title">About</p>
     </div>
+  </div>
+  <div class="container">
 
     <nav class="nav-bar">
       <a href="index.html" class="bar-item">Home</a>
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
+      <a href="contact.html" class="bar-item">Contact</a>
     </nav>
 
     <div class="row row-cols-2">
@@ -39,21 +40,19 @@
       <div class="col">
         <h3>Hobbies</h3>
         <ul>
-          <li>Hiking, backpacking and camping</li>
+          <li>Hiking, backpacking and camping, either alone or with my family</li>
           <li>Wildcrafting and Foraging</li>
           <li>Reading</li>
-          <li>Creating more list items</li>
+          <li>Learning as many plants IDs as I can remember</li>
           <li>So that my page looks more even</li>
-          <li>Almost there</li>
-          <li>Looks better</li>
         </ul>
       </div>
       <div class="col">
         <h3>Interest in Coding</h3>
-        <ol>
+        <ul>
           <li>Always learning new things both in and out of work, programming will allow me to learn new things my whole career.</li>
           <li>Can relate to finding tech overwhelming, would like to help keep people connected as life goes more and more online.</li>
-        </ol>
+        </ul>
       </div>
     </div>
 
