--- a/projects.html
+++ b/projects.html
@@ -6,18 +6,20 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="container">
-    <div class="jumbotron jumbotron-fluid text-center">
-      <div class="main-header">
-        <h1>Louie Knolle: Programming Portfolio</h1>
-        <p class="title"><strong>Projects</strong></p>
-      </div>
+  <div class="jumbotron jumbotron-fluid text-center">
+    <div class="main-header">
+      <h1>Louie Knolle: Programming Portfolio</h1>
+      <p class="title">Projects</p>
     </div>
+  </div>
+  <div class="container">
+    
 
     <nav class="nav-bar">
       <a href="index.html" class="bar-item">Home</a>
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
+      <a href="contact.html" class="bar-item">Contact</a>
     </nav>
 
     <dl class="row">
