--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en-US">
 <head>
   <title>Programming Portfolio</title>
+  <script src="js/bootstrap.js"></script>
   <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-  <div class="container">
-    <div class="jumbotron jumbotron-fluid text-center">
-      <div class="container">
-        <h1>Louie Knolle: Programming Portfolio</h1>
-        <p class="title"><strong>Web developer in training.</strong></p>
-      </div>
+<body id="index-body">
+  <div class="jumbotron jumbotron-fluid text-center">
+    <div class="container">
+      <h1>Louie Knolle: Programming Portfolio</h1>
+      <p class="title">Web developer in training.</p>
     </div>
-
+  </div>
+  <div class="container">
     <div class="nav-background">
     <nav class="nav-bar">
       <a href="" class="bar-item">Home</a>
       <a href="about-me.html" class="bar-item">About</a>
       <a href="projects.html" class="bar-item">Projects</a>
+      <a href="contact.html" class="bar-item">Contact</a>
     </nav>
     </div>
 
