--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
     </div>
 
     <div class="photo-container">
-      <img class="cover-photo" src="img/beach.JPEG" alt="summit with mountains in distance">
+      <div class="row top-photos">
+        <div class="col-md-6">
+          <img class="top-left-img" src="img/beach.JPEG" alt="person in hat on rocky beach">
+        </div>
+        <div class="col-md-6">
+          <img class="top-right-img" src="img/family.PNG" alt="man, woman and child sitting laughing">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <img class="bottom-img" src="img/index-cover.jpg" alt="person on mountain summit">
+        </div>
+      </div>
     </div>
 
     <!-- Couldn't link JS correctly? -->
