try bootstrap for img positions

--- a/index.html
+++ b/index.html
@@ -26,35 +26,21 @@
     <div class="photo-container">
       <div class="row top-photos">
         <div class="col-md-6">
-          <img class="top-left-img" src="img/beach.JPEG" alt="person in hat on rocky beach">
+          <img class="top-left-img" src="img/family.PNG" alt="person in hat on rocky beach">
         </div>
         <div class="col-md-6">
-          <img class="top-right-img" src="img/family.PNG" alt="man, woman and child sitting laughing">
+          <img class="top-right-img" src="img/beach.JPEGdd" alt="man, woman and child sitting laughing">
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <img class="bottom-img" src="img/index-cover.jpg" alt="person on mountain summit">
+        <div class="col-md-6">
+          <img class="bottom-left-img" src="img/index-cover.jpg" alt="person on mountain summit">
+        </div>
+        <div class="col-md-6">
+          <img class="bottom-right-img" src="img/fromBack.jpg" alt="person facing away in woods">
         </div>
       </div>
     </div>
-
-    <!-- Couldn't link JS correctly? -->
-    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/beach.JPEG" class="d-block w-100" alt="person on rocky beach smiling">
-        </div>
-        <div class="carousel-item">
-          <img src="img/index-cover.jpg" class="d-block w-100" alt="profile of person on mountain summit">
-        </div>
-        <div class="carousel-item">
-          <img src="img/family.PNG" class="d-block w-100" alt="man and woman with child laughing">
-        </div>
-      </div>
-    </div> -->
-
-
   </div>
 </body>
 </html>
