format imgs with flexwrap instead

--- a/index.html
+++ b/index.html
@@ -8,38 +8,25 @@
 </head>
 <body id="index-body">
   <div class="jumbotron jumbotron-fluid text-center">
-    <div class="container">
+    <div class="main-header">
       <h1>Louie Knolle: Programming Portfolio</h1>
       <p class="title">Web developer in training.</p>
     </div>
   </div>
   <div class="container">
     <div class="nav-background">
-    <nav class="nav-bar">
-      <a href="" class="bar-item">Home</a>
-      <a href="about-me.html" class="bar-item">About</a>
-      <a href="projects.html" class="bar-item">Projects</a>
-      <a href="contact.html" class="bar-item">Contact</a>
-    </nav>
+      <nav class="nav-bar">
+        <a href="" class="bar-item">Home</a>
+        <a href="about-me.html" class="bar-item">About</a>
+        <a href="projects.html" class="bar-item">Projects</a>
+        <a href="contact.html" class="bar-item">Contact</a>
+      </nav>
     </div>
-
-    <div class="photo-container">
-      <div class="row top-photos">
-        <div class="col-md-6">
-          <img class="top-left-img" src="img/family.PNG" alt="person in hat on rocky beach">
-        </div>
-        <div class="col-md-6">
-          <img class="top-right-img" src="img/beach.JPEGdd" alt="man, woman and child sitting laughing">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <img class="bottom-left-img" src="img/index-cover.jpg" alt="person on mountain summit">
-        </div>
-        <div class="col-md-6">
-          <img class="bottom-right-img" src="img/fromBack.jpg" alt="person facing away in woods">
-        </div>
-      </div>
+    <div class="img-container">
+      <img class="top-left-img" src="img/family.PNG" alt="man, woman and child sitting laughing">
+      <img class="top-right-img" src="img/beach.JPEG" alt="person in hat on rocky beach">
+      <img class="bottom-left-img" src="img/index-cover.jpg" alt="person on mountain summit">
+      <img class="bottom-right-img" src="img/fromBack.jpg" alt="person facing away in woods">
     </div>
   </div>
 </body>
