--- a/about-me.html
+++ b/about-me.html
@@ -2,23 +2,25 @@
 <html lang="en-US">
 <head>
   <title>About Me</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="main-header">
-      <h1>Louie Knolle: Programming Portfolio</h1>
-      <p class="title">About</p>
+      <h1 class="header">Louie Knolle</h1>
+      <p class="title">Junior Full Stack Developer</p>
+      <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
     </div>
   </div>
   <div class="container">
 
     <nav class="nav-bar">
       <a href="index.html" class="bar-item">Home</a>
-      <a href="about-me.html" class="bar-item">About</a>
+      <p class="current-item">About</p>
       <a href="projects.html" class="bar-item">Projects</a>
-      <a href="contact.html" class="bar-item">Contact</a>
     </nav>
 
     <div class="row row-cols-2">
