--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Programming Portfolio</title>
-  <script src="js/bootstrap.js"></script>
   <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 </head>
 <body id="index-body">
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="main-header">
-      <h1>Louie Knolle: Programming Portfolio</h1>
-      <p class="title">Web developer in training.</p>
+      <h1 class="header">Louie Knolle</h1>
+      <p class="title">Junior Full Stack Developer</p>
+      <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
+      <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
+      <a href = "mailto: knollelw@gmail.com>" i class="fa-solid fa-circle-envelope" style='font-size:30px'></i></a>
+
     </div>
   </div>
   <div class="container">
     <div class="nav-background">
       <nav class="nav-bar">
-        <a href="" class="bar-item">Home</a>
+        <p class="current-item">Home</p>
         <a href="about-me.html" class="bar-item">About</a>
         <a href="projects.html" class="bar-item">Projects</a>
-        <a href="contact.html" class="bar-item">Contact</a>
       </nav>
     </div>
     <div class="img-container">
