start to edit about page

--- a/index.html
+++ b/index.html
@@ -38,36 +38,25 @@
 
     <div class="row row-cols-2 hidden" id="about">
       <div class="col">
-        <h3>Education</h3>
+        <!-- <h3>Education</h3>
         <ul class="school">
           <li>Epicodus Fullstack Coding Bootcamp Graduate 2022 <span>(hopefully!)</span></li>
           <li>University of Cincinnati Class of 2014, B.S. Environmental Studies</li>
           <li>Anderson High School Class of 2010</li>
-        </ul>
+        </ul> -->
       </div>
       <div class="col">
-        <h3>Work Experience</h3>
+        <!-- <h3>Work Experience</h3>
         <ul class="work">
           <li>March 2020 to Present: Water Treatment Plant Operator, Town of Amherst, MA</li>
           <li>April 2018 to March 2020: Land Management Steward, The Trustees of Reservations</li>
-        </ul>
+        </ul> -->
       </div>
       <div class="col">
-        <h3>Hobbies</h3>
-        <ul>
-          <li>Hiking, backpacking and camping, either alone or with my family</li>
-          <li>Wildcrafting and Foraging</li>
-          <li>Reading</li>
-          <li>Learning as many plants IDs as I can remember</li>
-          <li>So that my page looks more even</li>
-        </ul>
+        <p>Having held many jobs related to the outdoors and managing natural resources, I am a very recent convert to the tech community. The one constant in my various roles has been the need to learn new skills and adapt to different work flows. That's perhaps one of the things that interests me most about web and software development, it will both allow and require that I continue to learn throughout my entire career.</p>
       </div>
       <div class="col">
-        <h3>Interest in Coding</h3>
-        <ul>
-          <li>Always learning new things both in and out of work, programming will allow me to learn new things my whole career.</li>
-          <li>Can relate to finding tech overwhelming, would like to help keep people connected as life goes more and more online.</li>
-        </ul>
+        <p>With a background of working for family-run farms, non-profits and small businesses, I enjoy connecting with those I work with and being a part of a team and organization that truly cares about the work they do. I am currently enrolled in a full stack web development bootcamp through Epicodus with the projection to graduate in December 2022.</p>
       </div>
     </div>
     <div id="projects" class="hidden">
