--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Programming Portfolio</title>
-  <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   
@@ -37,21 +37,21 @@
     </div>
 
     <div class="row row-cols-2 hidden" id="about">
-      <div class="col">
-        <!-- <h3>Education</h3>
+      <!-- <div class="col">
+         <h3>Education</h3>
         <ul class="school">
           <li>Epicodus Fullstack Coding Bootcamp Graduate 2022 <span>(hopefully!)</span></li>
           <li>University of Cincinnati Class of 2014, B.S. Environmental Studies</li>
           <li>Anderson High School Class of 2010</li>
-        </ul> -->
+        </ul> 
       </div>
       <div class="col">
-        <!-- <h3>Work Experience</h3>
+        <h3>Work Experience</h3>
         <ul class="work">
           <li>March 2020 to Present: Water Treatment Plant Operator, Town of Amherst, MA</li>
           <li>April 2018 to March 2020: Land Management Steward, The Trustees of Reservations</li>
-        </ul> -->
-      </div>
+        </ul> 
+      </div> -->
       <div class="col">
         <p>Having held many jobs related to the outdoors and managing natural resources, I am a very recent convert to the tech community. The one constant in my various roles has been the need to learn new skills and adapt to different work flows. That's perhaps one of the things that interests me most about web and software development, it will both allow and require that I continue to learn throughout my entire career.</p>
       </div>
