first line about paragraphs color change

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           <li>April 2018 to March 2020: Land Management Steward, The Trustees of Reservations</li>
         </ul> 
       </div> -->
-      <div class="">
+      <div class="about-body">
         <p>Having held many jobs related to the outdoors and managing natural resources, I am a recent addition to the tech community. The one constant in my various roles has been the need to learn new skills and adapt to different work flows. That's perhaps one of the things that interests me most about web and software development, it will both allow and require that I continue to learn throughout my entire career. I am resourceful and accustomed to working with minimal supervision as well as an experienced collaborative and communicative team member.</p>
       </div>
-      <div class="">
+      <div class="about-body">
         <p>With a background of working for family-run farms, non-profits and small businesses, I enjoy connecting with those I work with and being a part of a team and organization that truly cares about the work they do. I am currently enrolled in a full stack web development bootcamp through Epicodus with the projection to graduate in December 2022. In it I am learning HTML, CSS, Boostrap, C#, .NET, and REACT.js.</p>
       </div>
     </div>
