--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </dd>
       
         <dt class="col-sm-3"><a href="https://github.com/louieknolle/BakeryVendors.Solution.git" class="proj-list">Bakery's Vendor Orders Tracker</a></dt>
-        <dd class="col-sm-9">My first <em>C#</em> web application built using <em>ASP.NET Core MVC</em>. In addition to using an MVC for the firs time, it was build with emphasis on <em>TDD</em> and using <em>MS Test</em>. It is an app for a fictional bakery to keep track of orders from its various vendors. Also uses <em>Razor</em> for webpage display.  Soon to be refactored to include a database on <em>mySQL</em> with communication via the <em>Entity Framework</em>.</dd>
+        <dd class="col-sm-9">My first <em>C#</em> web application built using <em>ASP.NET Core MVC</em>. In addition to using an MVC for the firs time, it was built with emphasis on <em>TDD</em> and using <em>MS Test</em>. It is an app for a fictional bakery to keep track of orders from its various vendors. Also uses <em>Razor</em> for webpage display.  Soon to be refactored to include a database on <em>mySQL</em> with communication via the <em>Entity Framework</em>.</dd>
       
         <!-- <dt class="col-sm-3 text-truncate"><a href="https://github.com/louieknolle/my-first-webpage.git" class="proj-list">First Webpage</a></dt>
         <dd class="col-sm-9">This was one of the first practice projects we worked on as we learned about different <em>HTML</em> tags and basic styling techniques with <em>CSS</em>. </dd> -->
