--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Programming Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
@@ -11,48 +14,23 @@
 </head>
 <body id="index-body">
   <div class="jumbotron jumbotron-fluid text-center">
-    <div class="main-header">
       <h1 class="header">Louie Knolle</h1>
       <p class="title">Full Stack Developer</p>
+      <div id="contactLinks">
       <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
       <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
       <a href = "mailto: knollelw@gmail.com>" i class="fa-solid fa-circle-envelope" style='font-size:30px'></i></a>
     </div>
   </div>
   <div class="container">
-
-    <div class="nav-background">
-      <nav class="nav-bar">
-        <p class="current-item" id="homeIcon">Home</p>
-        <p class="bar-item" id="aboutIcon">About</p>
-        <p class="bar-item" id="projectsIcon">Projects</p>
-      </nav>
-    </div>
-
     <div id="img-container" class="photos">
-      <img class="top-left-img" src="img/family.PNG" alt="man, woman and child sitting laughing">
+      <!-- <img class="top-left-img" src="img/family.PNG" alt="man, woman and child sitting laughing"> -->
       <img class="top-right-img" src="img/beach.JPEG" alt="person in hat on rocky beach">
-      <img class="bottom-left-img" src="img/index-cover.jpg" alt="person on mountain summit">
-      <img class="bottom-right-img" src="img/fromBack.jpg" alt="person facing away in woods">
+      <!-- <img class="bottom-left-img" src="img/index-cover.jpg" alt="person on mountain summit">
+      <img class="bottom-right-img" src="img/fromBack.jpg" alt="person facing away in woods"> -->
     </div>
 
-    <div class="flex-md-column align-items-md-end
-    hidden" id="about">
-      <!-- <div class="col">
-         <h3>Education</h3>
-        <ul class="school">
-          <li>Epicodus Fullstack Coding Bootcamp Graduate 2022 <span>(hopefully!)</span></li>
-          <li>University of Cincinnati Class of 2014, B.S. Environmental Studies</li>
-          <li>Anderson High School Class of 2010</li>
-        </ul> 
-      </div>
-      <div class="col">
-        <h3>Work Experience</h3>
-        <ul class="work">
-          <li>March 2020 to Present: Water Treatment Plant Operator, Town of Amherst, MA</li>
-          <li>April 2018 to March 2020: Land Management Steward, The Trustees of Reservations</li>
-        </ul> 
-      </div> -->
+    <div class="flex-md-column align-items-md-end" id="about">
       <div class="about-body">
         <p>Having held many jobs related to the outdoors and managing natural resources, I am a recent addition to the tech community. The one constant in my various roles has been the need to learn new skills and adapt to different work flows. That's perhaps one of the things that interests me most about web and software development, it will both allow and require that I continue to learn throughout my entire career. I am resourceful and accustomed to working with minimal supervision as well as an experienced collaborative and communicative team member.</p>
       </div>
@@ -60,7 +38,7 @@
         <p>With a background of working for family-run farms, non-profits and small businesses, I enjoy connecting with those I work with and being a part of a team and organization that truly cares about the work they do. I am currently enrolled in a full stack web development bootcamp through Epicodus with the projection to graduate in December 2022. In it I am learning HTML, CSS, Boostrap, C#, .NET, and REACT.js.</p>
       </div>
     </div>
-    <div id="projects" class="hidden">
+    <div id="projects" class="">
       <dl class="row">
         <dt class="col-sm-3"><a href="#" class="proj-list">This website!
         </a></dt>
