--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
@@ -19,23 +22,16 @@
       <div id="contactLinks">
       <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
       <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
-      <a href = "mailto: knollelw@gmail.com>" i class="fa-solid fa-circle-envelope" style='font-size:30px'></i></a>
     </div>
   </div>
   <div class="container">
-    <div id="img-container" class="photos">
-      <!-- <img class="top-left-img" src="img/family.PNG" alt="man, woman and child sitting laughing"> -->
-      <img class="top-right-img" src="img/beach.JPEG" alt="person in hat on rocky beach">
-      <!-- <img class="bottom-left-img" src="img/index-cover.jpg" alt="person on mountain summit">
-      <img class="bottom-right-img" src="img/fromBack.jpg" alt="person facing away in woods"> -->
-    </div>
-
-    <div class="flex-md-column align-items-md-end" id="about">
-      <div class="about-body">
-        <p>Having held many jobs related to the outdoors and managing natural resources, I am a recent addition to the tech community. The one constant in my various roles has been the need to learn new skills and adapt to different work flows. That's perhaps one of the things that interests me most about web and software development, it will both allow and require that I continue to learn throughout my entire career. I am resourceful and accustomed to working with minimal supervision as well as an experienced collaborative and communicative team member.</p>
+    <div id="aboutContainer" class="row">
+      <div class="col-md-4 aboutPhoto">
+        <img class="bioPic" src="img/beach.JPEG" alt="person in hat on rocky beach">
       </div>
-      <div class="about-body">
-        <p>With a background of working for family-run farms, non-profits and small businesses, I enjoy connecting with those I work with and being a part of a team and organization that truly cares about the work they do. I am currently enrolled in a full stack web development bootcamp through Epicodus with the projection to graduate in December 2022. In it I am learning HTML, CSS, Boostrap, C#, .NET, and REACT.js.</p>
+      <div class="col-md-8 aboutBody">
+        <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact in the healthcare, environmental or social justice fields.</p>
+        <p class="skills">Currently experienced in: HTML, CSS, Javascript, jQuery, C#, ASP.NET, ASP.NET Core MVC, mySQL, MSTest, and Jest. </p>
       </div>
     </div>
     <div id="projects" class="">
