--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
     </div>
     <div id="projects" class="">
       <div class="row">
-        <div class="col-md-2"><button><a href="http://louieknolle.dev" class="proj-list">This website!
+        <div class="col-md-2"><button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">View repo
         </a></button></div>
-        <div class="col-md-6"><p>HTML, CSS, Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p></div>
+        <div class="col-md-6"><p class="projTitle">This portfolio site</p><p>HTML, CSS, Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p></div>
         <div class="col-md-4">
           <img src="" alt="">
         </div>
         <div class="row">
-          <div class="col-md-2"><button><a href="https://github.com/louieknolle/quote-game.git" class="proj-list">Famous Quotes API Trivia</a></button></div>
-          <div class="col-md-5"><p>HTML, CSS, jQuery, JS, APIs</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p></div>
+          <div class="col-md-2"><button><a href="https://github.com/louieknolle/quote-game.git" target="_blank" class="proj-list fab fa-github"></a>View repo</button></div>
+          <div class="col-md-5"><p class="projTitle">Famous Quotes API Trivia</p><p>HTML, CSS, jQuery, JS, APIs</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p></div>
           <div class="col-md-5 quotesGif">
             <img src="img/QuotesGame.gif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
           </div>
       </div>
       <div class="row">
-        <div class="col-md-2"><button><a href="https://github.com/louieknolle/HairSalon.Solution" class="proj-list">Salon Stylist and Clients Manager</a></button></div>
-        <div class="col-md-5"><p>C#, ASP.Core MVC, Razor, Entity Framework, mySQL</p><p>My most recent bootcamp independent project. Utilizing a database on mySQL and the Entity Framework to communicate it, allows salon owner to create and edit list of employed stylists and each of their respective clients.</p></div>
+        <div class="col-md-2"><button><a href="https://github.com/louieknolle/HairSalon.Solution" target=”_blank” class="proj-list fab fa-github" >View repo</a></button></div>
+        <div class="col-md-5"><p class="projTitle">Salon Stylist and Clients Manager</p><p>C#, ASP.Core MVC, Razor, Entity Framework, mySQL</p><p>My most recent bootcamp independent project. Utilizing a database on mySQL and the Entity Framework to communicate it, allows salon owner to create and edit list of employed stylists and each of their respective clients.</p></div>
         <div class="col-md-5 quotesGif">
           <img src="img/QuotesGame.gif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
         </div>
