add portfolio pic v1.0

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       </div>
     </div>
     <div id="projects" class="">
-      <div class="row">
+      <div class="row firstProjectSection">
         <div class="col-md-2"><button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">View repo
         </a></button></div>
         <div class="col-md-6"><p class="projTitle">This portfolio site</p><p>HTML, CSS, Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p></div>
         <div class="col-md-4">
-          <img src="" alt="">
+          <img src="img/firstVersion.png" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
         </div>
         <div class="row">
           <div class="col-md-2"><button><a href="https://github.com/louieknolle/quote-game.git" target="_blank" class="proj-list fab fa-github"></a>View repo</button></div>
