--- a/index.html
+++ b/index.html
@@ -31,29 +31,40 @@
       </div>
       <div class="col-md-8 aboutBody">
         <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
-        <p class="skills">Currently experienced in: HTML, CSS, Javascript, jQuery, C#, ASP.NET, ASP.NET Core MVC, mySQL, MSTest, and Jest. </p>
+        <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ MSTest ▫ Jest</p>
       </div>
     </div>
     <div id="projects" class="">
       <div class="row firstProjectSection">
-        <div class="col-md-2"><button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">View repo
-        </a></button></div>
-        <div class="col-md-6"><p class="projTitle">This portfolio site</p><p>HTML, CSS, Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p></div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-2">
+          <button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">
+          </a>View repo</button>
+        </div> -->
+        <div class="col-md-6">
+          <p class="projTitle">This portfolio site</p><p>HTML ▫ CSS ▫ Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p>
+          <button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">
+          </a>View repo</button>
+        </div>
+        <div class="col-md-6">
           <img src="img/firstVersion.png" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
+          <p>v1.0</p>
         </div>
         <div class="row">
-          <div class="col-md-2"><button><a href="https://github.com/louieknolle/quote-game.git" target="_blank" class="proj-list fab fa-github"></a>View repo</button></div>
-          <div class="col-md-5"><p class="projTitle">Famous Quotes API Trivia</p><p>HTML, CSS, jQuery, JS, APIs</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p></div>
-          <div class="col-md-5 quotesGif">
-            <img src="img/QuotesGame.gif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
+          <div class="col-md-6">
+            <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
+          </div>
+          <div class="col-md-6">
+            <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
+            <button><a href="https://github.com/louieknolle/quote-game.git" target="_blank" class="proj-list fab fa-github"></a>View repo</button>
           </div>
       </div>
       <div class="row">
-        <div class="col-md-2"><button><a href="https://github.com/louieknolle/HairSalon.Solution" target=”_blank” class="proj-list fab fa-github" >View repo</a></button></div>
-        <div class="col-md-5"><p class="projTitle">Salon Stylist and Clients Manager</p><p>C#, ASP.Core MVC, Razor, Entity Framework, mySQL</p><p>My most recent bootcamp independent project. Utilizing a database on mySQL and the Entity Framework to communicate it, allows salon owner to create and edit list of employed stylists and each of their respective clients.</p></div>
-        <div class="col-md-5 quotesGif">
-          <img src="img/QuotesGame.gif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
+        <div class="col-md-6">
+          <p class="projTitle">Salon Stylist and Clients Manager</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Entity Framework ▫ mySQL</p><p>My most recent bootcamp independent project. Utilizing a database on mySQL and the Entity Framework to communicate it, allows salon owner to create and edit list of employed stylists and each of their respective clients.</p>
+          <button><a href="https://github.com/louieknolle/HairSalon.Solution/tree/main/HairSalon" target=”_blank” class="proj-list fab fa-github" ></a>View repo</button>
+        </div>
+        <div class="col-md-6">
+          <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
         </div>
     </div>
     </div>
