--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </div>
     <div id="projects" class="">
       <div class="row firstProjectSection">
-        <!-- <div class="col-md-2">
+        <div class="col-md-2">
           <button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">
           </a>View repo</button>
-        </div> -->
+        </div>
         <div class="col-md-6">
           <p class="projTitle">This portfolio site</p><p>HTML ▫ CSS ▫ Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p>
           <button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">
