--- a/index.html
+++ b/index.html
@@ -36,14 +36,10 @@
     </div>
     <div id="projects" class="">
       <div class="row firstProjectSection">
-        <div class="col-md-2">
-          <button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">
-          </a>View repo</button>
-        </div>
         <div class="col-md-6">
           <p class="projTitle">This portfolio site</p><p>HTML ▫ CSS ▫ Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p>
-          <button><a href="https://github.com/louieknolle/program-portfolio" target="_blank" class="proj-list fab fa-github">
-          </a>View repo</button>
+          <a href="https://github.com/louieknolle/program-portfolio" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
+          </a>
         </div>
         <div class="col-md-6">
           <img src="img/firstVersion.png" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
@@ -55,16 +51,16 @@
           </div>
           <div class="col-md-6">
             <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
-            <button><a href="https://github.com/louieknolle/quote-game.git" target="_blank" class="proj-list fab fa-github"></a>View repo</button>
+            <a href="https://github.com/louieknolle/quote-game.git" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
           </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <p class="projTitle">Salon Stylist and Clients Manager</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Entity Framework ▫ mySQL</p><p>My most recent bootcamp independent project. Utilizing a database on mySQL and the Entity Framework to communicate it, allows salon owner to create and edit list of employed stylists and each of their respective clients.</p>
-          <button><a href="https://github.com/louieknolle/HairSalon.Solution/tree/main/HairSalon" target=”_blank” class="proj-list fab fa-github" ></a>View repo</button>
+          <a href="https://github.com/louieknolle/HairSalon.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
         </div>
         <div class="col-md-6">
-          <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
+          <img src="img/hairsaloncode.PNG" class="quotesGif" alt="snippet of c-sharp controller methods code">
         </div>
     </div>
     </div>
