some refactoring header and add resume pdf

--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 <body id="index-body">
   <div class="jumbotron jumbotron-fluid text-center">
       <h1 class="header">Louie Knolle</h1>
-      <p class="title">Full Stack Developer</p>
+      <div>
+        <p class="title">Full Stack Developer</p>
+      </div>
       <div id="contactLinks">
-      <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
-      <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
+      <div>
+        <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
+      </div>
     </div>
   </div>
   <div class="container">
@@ -32,6 +38,8 @@
       <div class="col-md-8 aboutBody">
         <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
         <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ MSTest ▫ Jest</p>
+        <a href="" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
+        </a>
       </div>
     </div>
     <div id="projects" class="">
@@ -50,7 +58,7 @@
             <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
           </div>
           <div class="col-md-6">
-            <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
+            <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs ▫ Webpack</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
             <a href="https://github.com/louieknolle/quote-game.git" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
           </div>
       </div>
