--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="col-md-8 aboutBody">
         <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
         <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ MSTest ▫ Jest</p>
-        <a href="" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
+        <a href="docs/Louie Knolle CheckWriters Resume.pdf" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
         </a>
       </div>
     </div>
