--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-  
 </head>
 <body id="index-body">
   <div class="jumbotron jumbotron-fluid text-center">
@@ -23,11 +21,14 @@
       </div>
       <div id="contactLinks">
       <div>
-        <a href="https://github.com/louieknolle"><i class="fab fa-github" style='font-size:30px'></i></a>
+        <a href="https://github.com/louieknolle"><i class="fa-brands fa-github" style='font-size:30px'></i></a>
       </div>
-      <div>
+      <div class="linkedLink">
         <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
       </div>
+      <!-- <div>
+        <a href="https://www.linkedin.com/in/louieknolle/"><i class="fa-solid fa-circle-envelope style='font-size:30px'"></i></a>
+      </div> -->
     </div>
   </div>
   <div class="container">
@@ -37,7 +38,7 @@
       </div>
       <div class="col-md-8 aboutBody">
         <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
-        <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ MSTest ▫ Jest</p>
+        <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
         <a href="docs/Louie Knolle CheckWriters Resume.pdf" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
         </a>
       </div>
@@ -75,5 +76,6 @@
 
   </div>
   <script src="js/scripts.js"></script>
+  <script src="https://kit.fontawesome.com/11b8061109.js" crossorigin="anonymous"></script>
 </body>
 </html>
