add blank target for header links

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </div>
       <div id="contactLinks">
       <div>
-        <a href="https://github.com/louieknolle"><i class="fa-brands fa-github" style='font-size:30px'></i></a>
+        <a href="https://github.com/louieknolle" target="_blank"><i class="fa-brands fa-github" style='font-size:30px'></i></a>
       </div>
       <div class="linkedLink">
-        <a href="https://www.linkedin.com/in/louieknolle/"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
+        <a href="https://www.linkedin.com/in/louieknolle/" target="_blank"><i class="fab fa-linkedin-in style='font-size:30px'"></i></a>
       </div>
     </div>
   </div>
