--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <div class="col-md-8 aboutBody">
         <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
         <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
-        <a href="docs/Resume.pdf" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
-        </a>
+        <!-- <a href="docs/Resume.pdf" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
+        </a> -->
       </div>
     </div>
     <div id="projects" class="">
