--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://github.com/louieknolle/program-portfolio" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
           </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 earlySiteBox">
           <img src="img/firstVersion.png" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
           <p>v1.0</p>
         </div>
