--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="container">
     <div id="aboutContainer" class="row">
       <div class="col-md-4 aboutPhoto">
-        <img class="bioPic" src="img/beach.JPEG" alt="bearded person in hat on rocky beach smiling">
+        <img class="bioPic" src="img/headshot.JPG" alt=" headshot of a bearded person smiling with mountains in the background over right shoulder">
       </div>
       <div class="col-md-8 aboutBody">
         <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
