update to include gear cave

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
-          </div>
-          <div class="col-md-6">
             <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs ▫ Webpack</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
             <a href="https://github.com/louieknolle/quote-game.git" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
+          </div>
+          <div class="col-md-6">
+            <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
           </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <p class="projTitle">Salon Stylist and Clients Manager</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Entity Framework ▫ mySQL</p><p>My most recent bootcamp independent project. Utilizing a database on mySQL and the Entity Framework to communicate it, allows salon owner to create and edit list of employed stylists and each of their respective clients.</p>
-          <a href="https://github.com/louieknolle/HairSalon.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
+          <p class="projTitle">Hiking Gear Inventory and Packing List Maker</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Entity Framework ▫ mySQL</p><p>My current personal project which allows the user to create gear categories, input hiking and camping gear and create many to many relationships between the two. </p>
+          <a href="https://github.com/louieknolle/HikingGearInventory.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
         </div>
         <div class="col-md-6">
-          <img src="img/hairsaloncode.PNG" class="quotesGif" alt="snippet of c-sharp controller methods code">
+          <img src="img/gearCave.PNG" class="quotesGif" alt="snippet of c-sharp controller methods code">
         </div>
     </div>
     </div>
