--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
         <img class="bioPic" src="img/headshot.JPG" alt=" headshot of a bearded person smiling with mountains in the background over right shoulder">
       </div>
       <div class="col-md-8 aboutBody">
-        <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, C# and .NET. I am currently enrolled in a coding bootcamp and will be adding React.js to my tool belt this fall.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
-        <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ mySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
+        <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, React, C# and .NET. I am currently enrolled in a full stack coding bootcamp and will be finishing December 2022.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
+        <p>In my freetime I can be found learning new coding languages and frameworks, hiking with my family, reading anything on the fiction spectrum, and slowing everyone up by constantly stopping to identify plants and trees.</p>
+        <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ React ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ RESTful API building ▫ mySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
         <!-- <a href="docs/Resume.pdf" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
         </a> -->
       </div>
     </div>
     <div id="projects" class="">
+      <h3 class="text-center" id="projectTitle">Projects</h3>
       <div class="row firstProjectSection">
         <div class="col-md-6">
           <p class="projTitle">This portfolio site</p><p>HTML ▫ CSS ▫ Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p>
