updated about and projects

--- a/index.html
+++ b/index.html
@@ -34,29 +34,35 @@
         <img class="bioPic" src="img/headshot.JPG" alt=" headshot of a bearded person smiling with mountains in the background over right shoulder">
       </div>
       <div class="col-md-8 aboutBody">
-        <p class="aboutText">My name is Louie Knolle and I am a full stack developer specializing in Javascript, React, C# and .NET. I am currently enrolled in a full stack coding bootcamp and will be finishing December 2022.  I'm open for employment as a full stack developer and hope to work for a company making a positive impact with their product since technology should improve the lives of others and be accessible to everyone. </p>
-        <p>In my freetime I can be found learning new coding languages and frameworks, hiking with my family, reading anything on the fiction spectrum, and slowing everyone up by constantly stopping to identify plants and trees.</p>
-        <p class="skills">Currently experienced with: <br> HTML ▫ CSS ▫ React ▫ Javascript ▫ jQuery ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ RESTful API building ▫ mySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
-        <!-- <a href="docs/Resume.pdf" target="_blank" ><button class="proj-list fab fa-github">View my resume</button>
-        </a> -->
+        <p class="aboutText">I am an easy-going and driven software developer seeking a full-stack or front-end position after completing my coding boot camp, an internship, and acquiring freelance work experience. With previous professional experience as a backpacking guide, fruit picker, maple sugarer, tree farmer, and conservation land steward, I am a dedicated and proven learner of new skills and trades and am always eager to learn more.  </p>
+        <p>I highly value tech's ability to make goods and services more accessible and the world a more just place. And am especially passionate about the intersection of sustainability, fighting climate change, and technology.</p>
+        <p class="skills">Currently experienced with: <br>React ▫ Javascript ▫ jQuery ▫ C# ▫ Typescript ▫ Node.js ▫ .NET ▫ ASP.NET Core MVC ▫ RESTful API building ▫ MySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
       </div>
     </div>
     <div id="projects" class="">
       <h3 class="text-center" id="projectTitle">Projects</h3>
       <div class="row firstProjectSection">
         <div class="col-md-6">
-          <p class="projTitle">This portfolio site</p><p>HTML ▫ CSS ▫ Boostrap CSS</p><p>The second version of my first coding bootcamp independent project. For now a simple splash page introducing myself and providing GitHub and LinkedIn anchors as well as project examples.</p>
-          <a href="https://github.com/louieknolle/program-portfolio" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
+          <p class="projTitle">Trailpanion Hiking App</p><p>React.js ▫ TailwindCSS ▫ Trail API and Mapbox GL JS ▫ PostgreSQL ▫ Node.js ▫ Firebase</p><p>Allows users to create an inventory of hiking/outdoors gear, create packing lists, and browse and save potential destinations.</p>
+          <a href="https://github.com/louieknolle/WorkingCapstoneTitle/tree/main/trailpanion" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
           </a>
         </div>
         <div class="col-md-6 earlySiteBox">
-          <img src="img/firstVersion.png" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
-          <p>v1.0</p>
+          <img src="img/trailpanion.gif" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
         </div>
         <div class="row">
           <div class="col-md-6">
+            <p class="projTitle">Artist Portfolio Site</p><p>React.js ▫ React Router ▫ Third-party Contact Form</p><p>Client portfolio website to showcase their art.  Page navigation with React Router and custom side scrolling functionality.</p>
+            <a href="https://www.andyknolle.com/" target="_blank" ><button class="proj-list fab fa-github">View site</button></a>
+          </div>
+          <div class="col-md-6">
+            <img src="img/andyportfolio.png" class="quotesGif" alt="screenshot of artist portfolio site">
+          </div>
+      </div>
+        <div class="row">
+          <div class="col-md-6">
             <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs ▫ Webpack</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
-            <a href="https://github.com/louieknolle/quote-game.git" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
+            <a href="https://quotes-trivia.netlify.app/" target="_blank" ><button class="proj-list fab fa-github">View site</button></a>
           </div>
           <div class="col-md-6">
             <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
@@ -64,11 +70,11 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <p class="projTitle">Hiking Gear Inventory and Packing List Maker</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Entity Framework ▫ mySQL</p><p>My current personal project which allows the user to create gear categories, input hiking and camping gear and create many to many relationships between the two. </p>
-          <a href="https://github.com/louieknolle/HikingGearInventory.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
+          <p class="projTitle">All Trails Lead to Roam</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Esri ArcGIS API ▫ Entity Framework ▫ MySQL</p><p>Bootcamp team week project where users could search for trails from a custom ASP.NET Core Web API. Users could also click on map and geocoding allowed them so save that point.</p>
+          <a href="https://github.com/louieknolle/Trails.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
         </div>
         <div class="col-md-6">
-          <img src="img/gearCave.PNG" class="quotesGif" alt="snippet of c-sharp controller methods code">
+          <img src="img/trailsToRoam.png" class="quotesGif" alt="screenshot of trails to roam home page">
         </div>
     </div>
     </div>
